--- a/screen.css
+++ b/screen.css
@@ -1,7 +1,8 @@
 body {
 	background-color: #121212;
 	color: #efefef;
-	font-family: Futura, sans-serif;
+	font-family: Helvetica;
+
 }
 
 .wrapper {
